--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# macOS
 .DS_Store
+
+# virtual environments
+venv/
